add method for getting active user count
